# CURD

./: .aiignore  .gitattributes  .gitignore  AGENTS.md  AGENTS_QUICKSTART.md  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile.alpine  Dockerfile.ubuntu  GEMINI.md  LICENSE  Makefile  README.md  pyo3_config.ini  snapcraft.yaml  test_shell  test_shell.rs
.github/workflows/: ci.yml  release.yml
Formula/: curd.rb
curd/: Cargo.toml
curd-core/: Cargo.toml
curd-core/src/: auth.rs  build.rs  collab.rs  config.rs  connection.rs  context.rs  context_link.rs  debug.rs  deps.rs  diagram.rs  diff.rs  disclosure.rs  doc.rs  doctor.rs  edit.rs  fault.rs  file.rs  find.rs  gpu.rs  graph.rs  graph_audit.rs  history.rs  lang_plugin.rs  lib.rs  lsp.rs  lsp_client.rs  mcp.rs  mutation.rs  parser.rs  plan.rs  plan_agent.rs  plan_parallel.rs  plan_review.rs  plan_runtime.rs  plugin_client.rs  plugin_packages.rs  policy.rs  profile.rs  read.rs  refactor.rs  (+17 more)
curd-core/src/ops/: dispatch.rs  mod.rs  types.rs  validation.rs
curd-core/src/plan/: checkpoints.rs  dsl.rs  engine.rs  events.rs  mod.rs  types.rs
curd-core/templates/: lang_plugin.curdl.template.json  tool_plugin.curdt.template.json
curd-core/tests/: auth_test.rs  chromium_benchmark.rs  config_integration.rs  grand_tour.rs  graph_perf_scaffold.rs  integration_config_safety.rs  phase10_variants_test.rs  phase4_test.rs  phase6_test.rs  plan_module_compat.rs  profile_config_integration.rs  registry_test.rs  search_delegation_test.rs  simulate_contract_test.rs  variants_test.rs  vscode_stress_test.rs
curd-gpu-worker/: Cargo.toml
curd-gpu-worker/src/: main.rs
curd-node/: .gitignore  Cargo.toml  package-lock.json  package.json
curd-node/src/: lib.rs
curd-python/: .gitignore  Cargo.toml  pyproject.toml
curd-python/src/: lib.rs
curd-python/src/curd_python/: cli.py
curd/assets/completions/: _curd  curd.bash  curd.fish  curd.ps1
curd/assets/man/: curd.1
curd/assets/tldr/: curd.md
curd/src/: doctor.rs  init.rs  lib.rs  main.rs  mcp.rs  plan_artifact.rs  repl.rs  router.rs  validation.rs  workspace_init.rs  workspace_lifecycle.rs
curd/tests/: mcp_auth_test.rs  mcp_profile_test.rs  profile_matrix_full_test.rs  profile_matrix_lite_test.rs  router_common.rs  router_exec_test.rs  router_ops_test.rs  router_validation_test.rs
docs/: CONTROL_PLANE_INTERFACES.md  GETTING_STARTED.md  PACKAGE_MANAGERS.md  PLUGIN_EXTENSIONS.md  README.md  SCRIPTS_AND_PLANS.md  TOOLS_AND_PROFILES.md
examples/: README.md  bench_fts.rs
examples/curd-language-extension/: Makefile  README.md  manifest.template.json
examples/curd-native-tool-extension/: Makefile  README.md  manifest.template.json  tool.py
examples/parallel-variant-review/: README.md
examples/session-review-loop/: README.md
examples/supervised-refactor/: README.md
examples/tree-sitter-curd/: README.md  grammar.js  package.json
examples/tree-sitter-curd/corpus/: basic.txt
examples/tree-sitter-curd/queries/: curd.scm  highlights.scm
scripts/: PKGBUILD-bin.template  PKGBUILD-git.template  bench_gpu_modes.sh  bench_parser_backends.sh  bench_search.py  benchmark_curd.sh  cargo-zigbuild-wrapper.sh  doctor_ci.sh  generate_package_manager_assets.py  install_curd.ps1  installer.nsi  map_dist.py  mock_agent.py  package_macos.sh  perf_smoke.sh  test_in_container.sh  vv_release.sh
scripts/pkg/curd-bin/: .BUILDINFO  .MTREE  .PKGINFO
scripts/pkg/curd-bin-debug/: .BUILDINFO  .MTREE  .PKGINFO
scripts/src/: curd-x86_64
