[package]
name = "curd-core"
version = "0.7.0-beta"
edition = "2024"

[dependencies]
tree-sitter = { version = "0.25", features = ["wasm"] }
rand = "0.8"
rayon = "1.10"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
ignore = "0.4.23"
serde_json = "1.0.149"
toml = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
sha2 = "0.10.9"
tempfile = "3.10"
ureq = { version = "2.10", default-features = false }
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
aho-corasick = "1.1.4"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
getrandom = "0.4.1"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
wgpu = { version = "22.1", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.18", features = ["derive"], optional = true }
futures-intrusive = { version = "0.5.0", optional = true }
libloading = "0.9.0"

[features]
default = ["tls-rustls"]
tls-native = ["ureq/native-tls"]
tls-rustls = ["ureq/tls"]
index-json = []
gpu-embedded = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:futures-intrusive"]

[dev-dependencies]

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
# Already in dependencies
