[package]
name = "curd-node"
version = "0.6.0-beta"
edition = "2024"

[lib]
name = "curd_node"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
curd-core = { path = "../curd-core" }
napi = { version = "2.16.14", default-features = false, features = ["napi4", "serde-json", "async", "tokio_rt"] }
napi-derive = "2.16.12"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2.1.3"
