[package]
name = "curd-python"
version = "0.5.0-beta"
edition = "2024"

[lib]
name = "curd_python"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
curd-core = { path = "../curd-core" }
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py37"] }
pythonize = "0.24.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
