[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "curd-python"
version = "0.6.1-beta"
description = "Python bindings for CURD"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
curd = "curd_python.cli:main"

[tool.uv]
managed = true

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py37"]
module-name = "curd_python"
