[package]
name = "curd"
version = "0.5.0-beta"
edition = "2024"

[features]
default = ["full"]
core = []                           # CLI: index + search + graph + doctor + build + repl
mcp  = ["core"]                      # MCP JSON-RPC server + session auth + AI plans
full = ["core", "mcp", "gpu-embedded"]      # Everything

gpu-embedded = ["curd-core/gpu-embedded"]

[dependencies]
curd-core = { path = "../curd-core", default-features = false }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "io-util"] }
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.11.0"

[dev-dependencies]
tempfile = "3.10"

