[package]
name = "curd"
version = "0.7.1-beta"
edition = "2024"

[features]
default = ["full"]
core = []                           # CLI: index + search + graph + doctor + build + repl
mcp  = ["core"]                      # MCP JSON-RPC server + session auth + AI plans
full = ["core", "mcp", "gpu-embedded"]      # Everything

gpu-embedded = ["curd-core/gpu-embedded"]

[dependencies]
curd-core = { path = "../curd-core", default-features = false }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full", "io-util"] }
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.11.0"
colored = "2.1"
rustyline = "14.0"
log = "0.4"
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.10"
ed25519-dalek = "2.2.0"
getrandom = "0.4.1"
